--- a/app/templates/arritude.html
+++ b/app/templates/arritude.html
@@ -34,7 +34,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="/getattitude">Attitude</a>
+        <a class="navbar-brand" href="/getattitude">Sentiment analysis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
         </button>
 
 
-        <a class="navbar-brand" href="https://github.com/Harryxing2020/team4Project3StockML">GitHub</a>
+        <a class="navbar-brand" href="https://github.com/Harryxing2020/ensorFlow-used-for-Natural-Language-Processing">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,28 +57,17 @@
     <div class="parallax3">
         <br>
         <h1 style="color: white;">
-            Attitudes
+            Sentiment analysis (TensorFlow NLP sentiment model) for their last 20 tweets
             <a style="color: white;" target="_blank" href="https://twitter.com/JoeBiden">@JoeBiden</a>
             <a style="color: white;" target="_blank" href="https://twitter.com/realDonaldTrump">@realDonaldTrump</a>
-
-
         </h1>
 
     </div>
     <br>
-
-    <div class="container">
-
     
-                <div id="chartdivatt1"></div>
- 
+                <div id="chartdivatt1" style="width: 100%;height: 600px;"></div>
+                 <div id="chartdivatt2" style="width: 100%;height: 600px;"></div>
 
-                <div id="chartdivatt2"></div>
-
-
-
-
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.0.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.js"></script>
@@ -92,7 +81,6 @@
 
     <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
     <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-    <script src="https://cdn.amcharts.com/lib/4/themes/material.js"></script>
     <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 
 
