--- a/app/templates/presentation.html
+++ b/app/templates/presentation.html
@@ -30,7 +30,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="/getattitude">Attitude</a>
+        <a class="navbar-brand" href="/getattitude">Sentiment analysis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="https://github.com/Harryxing2020/team4Project3StockML">GitHub</a>
+        <a class="navbar-brand" href="https://github.com/Harryxing2020/ensorFlow-used-for-Natural-Language-Processing">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,9 +55,14 @@
 
     <div class="container">
 
-        <iframe
+        <!-- <iframe
             src="https://onedrive.live.com/embed?cid=177C6346CC25A836&resid=177C6346CC25A836%21320&authkey=AB-Q916QOWoZSbI&em=2"
+            width="1200" height="1000" frameborder="0" scrolling="no"></iframe> -->
+
+        <iframe
+            src="https://onedrive.live.com/embed?cid=177C6346CC25A836&resid=177C6346CC25A836%21322&authkey=AP3-XM2Kl0mAiNs&em=2"
             width="1200" height="1000" frameborder="0" scrolling="no"></iframe>
+
 
     </div>
 
