--- a/app/templates/wordcloud.html
+++ b/app/templates/wordcloud.html
@@ -34,7 +34,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="/getattitude">Attitude</a>
+        <a class="navbar-brand" href="/getattitude">Sentiment analysis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
         </button>
 
 
-        <a class="navbar-brand" href="https://github.com/Harryxing2020/team4Project3StockML">GitHub</a>
+        <a class="navbar-brand" href="https://github.com/Harryxing2020/ensorFlow-used-for-Natural-Language-Processing">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
