--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="/getattitude">Attitude</a>
+        <a class="navbar-brand" href="/getattitude">Sentiment analysis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="https://github.com/Harryxing2020/team4Project3StockML">GitHub</a>
+        <a class="navbar-brand" href="https://github.com/Harryxing2020/ensorFlow-used-for-Natural-Language-Processing">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,6 +57,9 @@
             <a style="color: white;" target="_blank" href="https://twitter.com/JoeBiden">@JoeBiden</a>
             <a style="color: white;" target="_blank" href="https://twitter.com/realDonaldTrump">@realDonaldTrump</a>
         </h1>
+        <img src="https://thewaywarddaughterblog.files.wordpress.com/2019/07/trumptweets.gif" alt="funny GIF" width = 400>
+        <img src="https://media3.giphy.com/media/kbiM96ZuOSBHm83rJZ/source.gif" alt="funny GIF" width = 300 style="float:right;margin-left:20px">
+
 
     </div>
     <br>
@@ -79,9 +82,11 @@
             <div class="col-md-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Who tweets?</h3>
+                        <h3 class="panel-title">Who is tweeting?</h3>
                     </div>
-                    <div id="sample-metadata" class="panel-body"></div>
+                    <div id="sample-metadata" class="panel-body">
+
+                    </div>
                 </div>
             </div>
 
